# rusty_dlna

./: .gitignore  CHANGELOG.md  IOS_SETUP.md  LICENSE  README.md  ffigen.yaml  flutter_rust_bridge.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/rusty_dlna_example/: MainActivity.kt
example/ios/: Podfile
example/ios/Runner/: Info.plist  Runner.entitlements
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner/: DebugProfile.entitlements  Release.entitlements
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: rusty_dlna.podspec
ios/Classes/: rusty_dlna.c
lib/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  rusty_dlna.dart  rusty_dlna_bindings_generated.dart
lib/api/: cast.dart  cast.freezed.dart
linux/: CMakeLists.txt
macos/: rusty_dlna.podspec
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: cast.rs
src/: CMakeLists.txt  rusty_dlna.c
windows/: CMakeLists.txt
