[package]
name = "rusty_dlna"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = [
    "rustls",
    "json",
] }

# ssdp-client = "2.0"  # 在 iOS 上有问题，改用手动实现
xml-rs = "1"
regex = "1.5"   # 用于快速提取 XML 中的 URL
anyhow = "1.0"
log = "0.4"
hex = "0.4"     # 之前忘了写这个，解析 MAC 地址需要
futures = "0.3" # <--- 新增这个，用于处理 Stream
socket2 = "0.6" # 用于底层 socket 操作，iOS 兼容性更好
